--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ img.emoji {
 <link rel='stylesheet' href='css/style.css?ver=1403833850' type='text/css' media='all' />
 <link rel='stylesheet' id='pe_theme_momentum-custom-css'  href='css/custom.css' type='text/css' media='all' />
 <link rel='stylesheet' href='css/main.css' type='text/css' media='all' />
-<script async type='text/javascript' src='js/jquery.js?ver=1.12.4'></script>
+<script type='text/javascript' src='js/jquery.js?ver=1.12.4'></script>
 <link rel='shortlink' href='http://www.boomtown.tech/' />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
